# Book-Lending-Web-App

./: Book Lending System.docx  Cargo.toml  README.md  auth.rs  book_lending.db  books.rs  db.rs  index.html  init.sql  main.rs  script.js
Book Lendering System with GUI/Backend/: Cargo.toml
Book Lendering System with GUI/Backend/migrations/: initial.sql
Book Lendering System with GUI/Backend/src/: database.rs  main.rs  models.rs  routes.rs
Book Lendering System with GUI/Frontend/: Admin.css  Admin.html  Admin.js  Landing Page.html
