[package]
name = "book_lending_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.5"
rand = "0.8"
regex = "1.0"
dotenv = "0.15"